--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   list-style: none;
+}
+
 nav {
    background: steelblue;
    padding: 10px;
@@ -13,11 +20,19 @@ h1 {
    color: steelblue;
 }
 
+main p,
+main h1 {
+   padding: 0.2rem 1rem;
+}
+
 main img {
    width: 150px;
    height: auto;
    border: 1px solid steelblue;
    box-shadow: 0 0 30px gray;
+   float: right;
+   margin-right: 1rem;
+   margin-left: 0.5rem;
 }
 
 p {
@@ -25,16 +40,22 @@ p {
 }
 
 aside {
-   margin: 0.5rem;
-   border: 3px solid rgba(18, 39, 0, 0.2);
-   padding: 1.4rem;
-   background-color: rgb(205, 238, 185);
-   color: rgb(28, 63, 0);
+   color: rgb(46, 46, 46);
    text-align: center;
+   position: relative;
+}
+
+aside h2 {
+   position: absolute;
+   top: 50px;
+   left: 0;
+   right: 0;
+   margin: auto;
+   color: white;
 }
 
 aside img {
-   width: 200px;
+   width: 300px;
    height: auto;
 }
 
@@ -43,4 +64,13 @@ footer {
    padding-top: 0.2rem;
    margin-top: 2rem;
    text-align: center;
+}
+
+/* Class Selectors */
+
+.box {
+   margin: 1rem;
+   border: 1px dashed #00000055;
+   padding: 1rem;
+   background-color: #d3daee;
 }
