--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,28 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Kanit:wght@200;500;700;800&display=swap');
+
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
+   font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+
+main,
+footer,
+.grid {
+   max-width: 840px;
+   margin: 0 auto;
 }
 
 nav {
    background: steelblue;
-   padding: 10px;
+   padding: 1rem;
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
 }
 
 nav a {
-   color: white;
    display: block;
-   padding: 20px;
+   color: white;
+   padding: 0.5rem;
+   text-decoration: none;
+   font-weight: bold;
 }
 
 h1 {
    color: steelblue;
+   border-bottom: 1px solid steelblue;
+   margin-bottom: 1rem;
+   padding: 1rem 0rem;
+   text-align: center;
 }
 
-main p,
-main h1 {
-   padding: 0.2rem 1rem;
+main {
+   order: 2;
 }
 
 main img {
@@ -35,19 +53,19 @@ main img {
    margin-left: 0.5rem;
 }
 
-p {
-   padding: 0;
+main p {
+   padding: 0.3rem 1rem;
 }
 
 aside {
    color: rgb(46, 46, 46);
-   text-align: center;
    position: relative;
 }
 
 aside h2 {
    position: absolute;
-   top: 50px;
+   text-align: center;
+   top: 90px;
    left: 0;
    right: 0;
    margin: auto;
@@ -56,7 +74,12 @@ aside h2 {
 
 aside img {
    width: 300px;
-   height: auto;
+   height: 400px;
+   object-fit: cover;
+}
+
+aside p {
+   padding-top: 1rem;
 }
 
 footer {
@@ -72,5 +95,10 @@ footer {
    margin: 1rem;
    border: 1px dashed #00000055;
    padding: 1rem;
-   background-color: #d3daee;
+   background-color: #dbf5ac;
+}
+
+.grid {
+   display: grid;
+   grid-template-columns: 1fr 3fr;
 }
