--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -9,10 +9,10 @@
     --paragraph-font: 'Inter', Arial, Helvetica, sans-serif;
     --heading-font: 'Kanit', Arial, Helvetica, sans-serif;
 
-    --nav-background-color: #cad8ff;
-    --nav-hover-background-color: #101d42ff;
-    --nav-link-color: #232ed1ff;
-    --nav-hover-color: #cad8ff;
+    --nav-background-color: #232ed100;
+    --nav-hover-background-color: #ebf0ff;
+    --nav-link-color: #ebf0ff;
+    --nav-hover-color: #232ed1;
 
 }
 
@@ -21,10 +21,56 @@
     max-width: 960px;
     padding: 0;
     margin: auto;
+    box-sizing: border-box;
 }
 
 main {
-    padding: 2rem;
+    /* padding: 2rem; */
+}
+
+header {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+
+    align-items: center;
+    justify-items: center;
+
+    background-color: var(--accent2-color);
+    /* margin: 0 2rem; */
+}
+
+header img {
+    width: 8rem;
+    height: 8rem;
+    object-fit: contain;
+    margin: 2rem;
+    background-color: white;
+    border-radius: 0.5rem;
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+nav a {
+    color: var(--nav-link-color);
+    background-color: var(--nav-background-color);
+    padding: 1rem;
+    margin: 2rem 1rem;
+    text-decoration: none;
+    transition: 250ms;
+    font-weight: 700;
+    border-radius: 5px;
+    min-width: 110px;
+    text-align: center;
+}
+
+nav a:hover {
+    color: var(--nav-hover-color);
+    background-color: var(--nav-hover-background-color);
+    text-decoration: none;
 }
 
 a {
@@ -47,10 +93,11 @@ h6 {
     position: relative;
 }
 
-.hero img {
+.hero>img {
     width: 100%;
+    height: 500px;
     display: block;
-    height: auto;
+    filter: brightness(0.6);
 }
 
 .hero h1,
@@ -59,28 +106,93 @@ h6 {
 }
 
 .hero h1 {
-    top: 15%;
+    top: 2rem;
     margin: auto;
     left: 0;
     right: 0;
     text-align: center;
-    color: var(--primary-color);
-    font-weight: 200;
+    color: var(--accent1-color);
+    font-weight: 800;
     font-size: 4rem;
-    background-color: #000000aa;
 }
 
 .hero article img {
     float: right;
-    max-width: 10rem;
+    max-width: 200px;
+    padding-left: 1rem;
 }
 
 .hero article {
-    bottom: 20%;
-    background-color: rgba(236, 253, 255, 0.8);
+    background-color: var(--accent2-color);
+    color: var(--accent1-color);
     padding: 3rem;
-    width: 80%;
+    width: 90%;
     margin: auto;
     right: 0;
     left: 0;
+    bottom: 5rem;
+    border-radius: 0.5rem;
+}
+
+.history {
+    /* margin: 2rem 0; */
+    padding: 3rem;
+    background-color: var(--secondary-color);
+}
+
+.history p {
+    color: var(--accent1-color)
+}
+
+.history h2 {
+    color: var(--accent1-color);
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    gap: 1rem;
+    padding: 3rem;
+    background-color: var(--accent2-color);
+}
+
+.adventure img {
+    width: 100%;
+    padding-top: 1rem;
+}
+
+.adventure figure {
+    padding: 1rem;
+    text-align: center;
+    background-color: var(--accent1-color);
+    color: var(--accent2-color);
+    font-weight: 800;
+    border-radius: 0.5rem;
+}
+
+figcaption {
+    padding-top: 0.5rem;
+    font-style: italic;
+    font-size: smaller;
+}
+
+.adventure h2 {
+    grid-column: 1/4;
+    width: 100%;
+    color: var(--accent1-color);
+}
+
+footer {
+    padding: 3rem 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) 60% repeat(3, 1fr);
+}
+
+footer p {
+    grid-column: 4/5;
 }
