--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,6 +15,7 @@
     --nav-hover-color: #232ed1;
 
     --section-padding: 3rem;
+    --transparent-accent: rgba(8, 14, 29, .75);
 
 }
 
@@ -89,46 +90,48 @@ h6 {
 
 .hero {
     position: relative;
+    min-height: 400px;
+    background-color: var(--accent2-color);
 }
 
 .hero>img {
+    max-height: 600px;
     width: 100%;
-    height: 500px;
-    display: block;
-    filter: brightness(0.6);
-}
-
-.hero h1,
-.hero article {
-    position: absolute;
+    object-fit: cover;
+    filter: brightness(0.2);
+    /* filter: blur(3px); */
 }
 
 .hero h1 {
-    top: 2rem;
-    margin: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
     color: var(--accent1-color);
     font-weight: 800;
     font-size: 4rem;
 }
 
-.hero article img {
-    float: right;
+.hero article {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+
+    justify-items: center;
+    top: 0;
+}
+
+.hero .content img {
     max-width: 200px;
     padding-left: 1rem;
 }
 
-.hero article {
-    background-color: var(--accent2-color);
+.hero .content {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: var(--transparent-accent);
     color: var(--accent1-color);
-    padding: var(--section-padding);
+    padding: 2rem;
     width: 90%;
-    margin: auto;
-    right: 0;
-    left: 0;
-    bottom: 5rem;
     border-radius: 0.5rem;
 }
 
@@ -317,10 +320,21 @@ textarea {
 .form-bottom button {
     padding: 1rem 2rem;
     margin-right: 0.5rem;
-    border: none;
     background-color: var(--primary-color);
-    color: var(--accent1-color);
     border-radius: 0.5rem;
+}
+
+button {
+    padding: 1rem 2rem;
+    transition: 250ms;
+    border: none;
+    color: var(--accent1-color);
+    background-color: var(--primary-color);
+}
+
+button:hover {
+    background-color: var(--accent2-color);
+    cursor: pointer;
 }
 
 .form-bottom {
@@ -334,4 +348,85 @@ input:active,
 input[type='radio']:checked,
 input[type='checkbox']:checked {
     accent-color: var(--primary-color);
+}
+
+.trip-hero h1 {
+    color: var(--accent1-color);
+}
+
+.trip-hero p {
+    color: var(--accent1-color);
+    opacity: 0.75;
+    font-size: larger;
+    max-width: 75%;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.trip-hero button {
+    padding: 1.5rem 3.5rem;
+    font-size: larger;
+    font-weight: 800;
+    border-radius: 5px;
+}
+
+
+.trip {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.trip article {
+    position: relative;
+    min-height: 300px;
+    min-width: 100%;
+    margin-bottom: 1rem;
+}
+
+.trip img {
+    width: 100%;
+}
+
+.trip button {
+    background-color: var(--secondary-color);
+    position: absolute;
+    bottom: -1.5rem;
+    right: 0;
+    left: 0;
+    max-width: 50%;
+    height: 4rem;
+    /* margin: auto; */
+    font-weight: 800;
+    font-size: large;
+    border-radius: 5px;
+}
+
+.trip button:hover {
+    background-color: var(--accent2-color);
+    cursor: pointer;
+}
+
+.trip p {
+    color: var(--accent1-color);
+    font-weight: 700;
+    font-size: 1.75rem;
+    padding-bottom: 3.5rem;
+    background-color: rgba(8, 14, 29, .75);
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.trips h2 {
+    margin-top: 2rem;
+}
+
+.trips p {
+    margin-bottom: 1rem;
 }
