--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -528,7 +528,7 @@ aside h2 {
     object-fit: cover;
 }
 
-.raft-with-us p {
+.raft-with-us h4 {
     padding: 1rem;
     text-align: center;
     font-size: 1.5rem;
